# face-swapper

./: .env.example  .env.infra.example  .gitignore  README.md  docker-compose-cpu.yaml  docker-compose-debug.yaml  docker-compose-slave.yaml  docker-compose.infra.yaml  docker-compose.yaml  package-lock.json
ApiGateway/: .env.development  app.dockerfile  get-images.js  package-lock.json  package.json
ApiGateway/src/: app.module.ts  main.ts
ApiGateway/src/Schemas/: Config.schema.ts  Directory.schema.ts  Image.schema.ts  User.schema.ts
ApiGateway/src/decorators/: User.decorator.ts
ApiGateway/src/face-swapper/: face-swapper.controller.spec.ts  face-swapper.controller.ts  face-swapper.models.ts  face-swapper.module.ts  face-swapper.service.spec.ts  face-swapper.service.ts
ApiGateway/src/vk/: vk.controller.ts  vk.module.ts  vk.service.ts
ApiGateway/test/: MongooseTestModule.ts  app.e2e-spec.ts
InswapperService/: app.dockerfile  exceptions.py  main.py  pyproject.toml  requirements.txt  worker.cpu.dockerfile  worker.dockerfile  worker.py
InswapperService/CodeFormer/CodeFormer/: inference_codeformer.py
InswapperService/CodeFormer/CodeFormer/basicsr/utils/: realesrgan_utils.py
InswapperService/CodeFormer/CodeFormer/facelib/utils/: face_restoration_helper.py
InswapperService/storage/: local_storage.py  object_storage.py
InswapperService/swapper/: __init__.py  models.py  restoration.py
fluentd/: Dockerfile
prometheus/: Dockerfile  Dockerfile.slave  config.slave.yml  config.yml
reverse-proxy-nginx/: dockerfile  dockerfile-dev  nginx-dev.conf  nginx.conf
(+12 files in other folders)
