[tool.poetry]
name = "inswapperservice"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiofiles = "23.1.0"
celery = "5.2.7"
fastapi = "0.103.2"
flower = "1.2.0"
jinja2 = "3.1.2"
pytest = "7.2.2"
redis = "4.5.4"
requests = "^2.31.0"
uvicorn = "0.21.1"
httpx = "0.23.3"
python-multipart = "^0.0.6"
asyncio = "^3.4.3"
minio = "^7.2.1"
pillow = "^10.1.0"
protobuf = ">=4.23.2"
addict = "^2.4.0"
future = "^0.18.3"
numpy = "^1.26.2"
opencv-python = "^4.8.1.78"
opencv-python-headless = "^4.8.1.78"
pyyaml = "^6.0.1"
scikit-image = "^0.22.0"
scipy = "^1.11.4"
tb-nightly = "^2.16.0a20231226"
torch = ">=1.7.1"
torchvision = "^0.16.2"
tqdm = "^4.66.1"
yapf = "^0.40.2"
lpips = "^0.1.4"
insightface = ">=0.7.3"
onnxruntime-gpu = "^1.16.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
